--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: menu
           </div>
           <div class="team">
             <span class="meta">Team</span>
-            <p>Killow</p>
+            <p>None</p>
           </div>
         </div>
       </a>
